fix row issue and spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,3 +32,6 @@ h6, .h6 {
   /* Pad bottom by footer height */
   padding: 0 0 60px;
 }
+#main{
+    padding-bottom: 60px;
+}
